<?xml version="1.0"?>
<package format="3">
  <name>can_bridge_tips</name>
  <version>0.0.0</version>
  <description>ROS2 CAN bridge node example for vcan testing</description>
  <maintainer email="slepynina.eu@gmail.com">Evgenia Slepynina</maintainer>
  <license>0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>can_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
